# backend-django-cowsay

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
cowsay/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
cowsay/migrations/: 0001_initial.py  0002_inputtext_cow.py
cowsay/templates/: 404.html  500.html  history.html  index.html
djangocowsay/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py
djangocowsay/cowsay/: forms.py  helpers.py  models.py  urls.py  views.py
djangocowsay/cowsay/migrations/: 0003_auto_20200512_1834.py
djangocowsay/cowsay/static/css/: cowsay.css
djangocowsay/cowsay/templates/: history.html  index.html
djangocowsay/djangocowsay/: settings.py  wsgi.py
