[tool.poetry]
name = "todo-backend-django-cowsay"
version = "0.1.0"
description = "A Django project that brings cowsay from your terminal to the world wide web."
authors = ["Kano Marvel <knmarvel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
